--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "bootstrap": "^5.1.3",
     "concurrently": "^5.3.0",
     "json-server": "^0.16.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
