--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "personal-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://kierancalavan.com/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"npm run start:server\" \"npm run start:react\""
+    "start": "concurrently \"npm run start:server\" \"npm run start:react\"",
+    "build": "react-scripts build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kieran-calavan/personal-site.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kieran Calavan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kieran-calavan/personal-site/issues"
@@ -20,8 +21,8 @@
   "homepage": "https://github.com/kieran-calavan/personal-site#readme",
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "concurrently": "^5.3.0",
-    "json-server": "^0.16.1"
+    "concurrently": "^8.2.0",
+    "json-server": "^0.17.3"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
